examples/src/fail_tests/auto_covariant.stderr
error: Ouroboros cannot automatically determine if this type is covariant.

       As an example, a Box<&'this ()> is covariant because it can be used as a
       Box<&'smaller ()> for any lifetime smaller than 'this. In contrast,
       a Fn(&'this ()) is not covariant because it cannot be used as a
       Fn(&'smaller ()). In general, values that are safe to use with smaller
       lifetimes than they were defined with are covariant, breaking this
       guarantee means the value is not covariant.

       To resolve this error, add #[covariant] or #[not_covariant] to the field.
  --> src/fail_tests/auto_covariant.rs:11:12
   |
11 |     field: NotGuaranteedCovariant<'this>
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> src/fail_tests/auto_covariant.rs:12:2
   |
12 | }
   |  ^ consider adding a `main` function to `$DIR/src/fail_tests/auto_covariant.rs`
